// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox tests Checkbox normal, locked, and disabled states should ignore click events when disabled or locked 1`] = `
<div>
  <div
    class="pretty p-default"
  >
    <input
      aria-checked="false"
      aria-disabled="true"
      disabled=""
      name="nodejs"
      role="checkbox"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="state"
    >
      <label />
    </div>
  </div>
</div>
`;

exports[`Checkbox tests Checkbox normal, locked, and disabled states should ignore click events when disabled or locked 2`] = `
<div>
  <div
    class="pretty p-locked p-default"
  >
    <input
      aria-checked="false"
      aria-disabled="true"
      name="nodejs"
      role="checkbox"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="state"
    >
      <label />
    </div>
  </div>
</div>
`;

exports[`Checkbox tests Checkbox smoke tests should match the basic snapshot 1`] = `
<div>
  <div
    class="pretty p-default"
  >
    <input
      aria-checked="false"
      name="nodejs"
      role="checkbox"
      tabindex="0"
      type="checkbox"
      value=""
    />
    <div
      class="state"
    >
      <label>
        Hello, World
      </label>
    </div>
  </div>
</div>
`;
